--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Prueba con GIT</h1>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, sunt.</p>
 </body>
 </html>
