--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <title>Portfolio</title>
 </head>
 <body>
-
+<!-- ENCABEZADO -->
     <header>
         <nav class="navbar navbar-expand-sm navbar-expand-md navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">S<span class="brand">A</span></a>
+                <a class="navbar-brand" href="#">S<span class="brandSpan">A</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,6 +42,32 @@
             </div>
         </nav>
     </header>
+<!-- SECCIONES -->
+    <main>
+        <!-- ABOUT ME -->
+        <section class="container-fluid aboutMeSection p-4">
+            <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-between align-items-center flex-wrap-reverse mx-4">
+                <div class="col-sm-6 col-md-6 col-lg-6 d-sm-flex-columm d-md-flex-columm d-lg-flex-columm justify-content-center">
+                    <p>Hi I'm <span class="brandSpan">Sebastián Araya</span></p>
+                    <p class="aboutMeText">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit molestiae quam nemo ipsa perferendis nihil earum minus saepe, obcaecati ad doloribus delectus explicabo ipsum modi dolor suscipit nesciunt doloremque incidunt repellat totam debitis provident harum. Quasi exercitationem natus libero nostrum.</p>
+                    <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-between gap-2">
+                        <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex">
+                            <button type="button" class="btn btn-dark">Download CV</button>
+                        </div>
+                        <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex">
+                            <button type="button" class="btn btn-dark">Download CV</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 d-flex justify-content-center">
+                    <img class="profilePicture" src="./assets/person.png" alt="Profile picture">
+                </div>
+            </div>
+        </section>       
+        
+        <section>
 
+        </section>
+    </main>
 </body>
 </html>
