--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <button type="button" class="btn btn-dark">Download CV</button>
                         </div>
                         <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex">
-                            <button type="button" class="btn btn-dark">Download CV</button>
+                            <button type="button" class="btn btn-dark">Read more</button>
                         </div>
                     </div>
                 </div>
@@ -64,10 +64,48 @@
                 </div>
             </div>
         </section>       
-        
-        <section>
-
+        <!-- PORTFOLIO -->
+        <section class="container-fluid p-4">
+            <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center text-center">
+                <div class="col-sm-3 col-md-3 col-lg-3">
+                    <h2>Portfolio</h2>
+                </div>
+            </div>
+            <div class="row row-gap-2">
+                <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
+                    <div class="card d-flex d-flex-column align-items-center">
+                        <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
+                        <div class="card-body">
+                            <h5 class="card-title">Project #1</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
+                    <div class="card d-flex d-flex-column align-items-center">
+                        <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
+                        <div class="card-body">
+                            <h5 class="card-title">Project #2</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
+                    <div class="card d-flex d-flex-column align-items-center">
+                        <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
+                        <div class="card-body">
+                            <h5 class="card-title">Project #3</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- SKILLS -->
+
     </main>
 </body>
 </html>
