--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Portfolio</title>
 </head>
-<body>
-<!-- ENCABEZADO -->
+<body class="d-flex flex-column justify-content-between">
+    <!-- ENCABEZADO -->
     <header>
         <nav class="navbar navbar-expand-sm navbar-expand-md navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
@@ -42,8 +42,81 @@
             </div>
         </nav>
     </header>
-<!-- SECCIONES -->
+    <!-- SECCIONES -->
     <main>
+        <section class="container-fluid p-4">
+            <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-around align-items-center">
+                <div class="col-sm-5 col-md-5 col-lg-5">
+                    <h2 class="fw-bold">My projects</h2>
+                    <p class="my-4 textDescription">
+                        In my journey as a web developer, I've had the privilege of working on a variety of projects where I've applied my skills in HTML, CSS, Bootstrap, and Git. These projects span from elegant and responsive websites to interactive and functional web applications. Using HTML and CSS, I've crafted the structure and design of these applications, ensuring an engaging and consistent user experience. Additionally, I've harnessed the power of Bootstrap to streamline development and ensure mobile compatibility. Git has been an invaluable tool for version control and efficient team collaboration, contributing to the success of these projects. I'm excited to share my work and continue exploring new opportunities in the world of web development.
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="row row-gap-2 mb-2">
+                        <div class="col-sm-6 col-md-6 col-lg-6">
+                            <div class="portfolioCard p-4">
+                                <div class="portfolioTitleContainer">
+                                    <h3>Project #1</h3>
+                                </div>
+                                <div class="webPreviewPortfolioContainer">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                </div>
+                                <div class="linkContainer">
+                                    <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
+                                    <a href="https://google.com" target="_blank"><img class="linkIcon" src="../assets/web.svg" alt="Web icon"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-6">
+                            <div class="portfolioCard p-4">
+                                <div class="portfolioTitleContainer">
+                                    <h3>Project #2</h3>
+                                </div>
+                                <div class="webPreviewPortfolioContainer">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                </div>
+                                <div class="linkContainer">
+                                    <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
+                                    <a href="https://google.com" target="_blank"><img class="linkIcon" src="../assets/web.svg" alt="Web icon"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-gap-2 mt-2">
+                        <div class="col-sm-6 col-md-6 col-lg-6">
+                            <div class="portfolioCard p-4">
+                                <div class="portfolioTitleContainer">
+                                    <h3>Project #3</h3>
+                                </div>
+                                <div class="webPreviewPortfolioContainer">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                </div>
+                                <div class="linkContainer">
+                                    <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
+                                    <a href="https://google.com" target="_blank"><img class="linkIcon" src="../assets/web.svg" alt="Web icon"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-6">
+                            <div class="portfolioCard p-4">
+                                <div class="portfolioTitleContainer">
+                                    <h3>Project #4</h3>
+                                </div>
+                                <div class="webPreviewPortfolioContainer">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                </div>
+                                <div class="linkContainer">
+                                    <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
+                                    <a href="https://google.com" target="_blank"><img class="linkIcon" src="../assets/web.svg" alt="Web icon"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer>
