--- a/index.html
+++ b/index.html
@@ -155,29 +155,28 @@
         <div class="socialContainer">
             <div class="socialNetwork">
                 <div class="socialIcon">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="footerIcon" src="./assets/linkedin.svg" alt="Linkedin icon"></a>
+                    <a href="https://www.linkedin.com/in/sarayaq/" target="_blank"><img class="footerIcon" src="../assets/linkedin.svg" alt="Linkedin icon"></a>
                 </div>
                 <div class="socialTag">
-                    <a href="https://www.linkedin.com/" target="_blank">@Linkedin</a>
+                    <a href="https://www.linkedin.com/in/sarayaq/" target="_blank">@sarayaq</a>
                 </div>
             </div>
             <div class="socialNetwork">
                 <div class="socialIcon">
-                    <a href="https://www.github.com/" target="_blank"><img class="footerIcon" src="./assets/github.svg" alt="Linkedin icon"></a>
+                    <a href="https://github.com/sebastianarayaq" target="_blank"><img class="footerIcon" src="../assets/github.svg" alt="Github icon"></a>
                 </div>
                 <div class="socialTag">
-                    <a href="https://www.github.com/" target="_blank">@Github</a>
+                    <a href="https://github.com/sebastianarayaq" target="_blank">@sebastianarayaq</a>
                 </div>
             </div>
             <div class="socialNetwork">
                 <div class="socialIcon">
-                    <a href="https://www.youtube.com/" target="_blank"><img class="footerIcon" src="./assets/youtube.svg" alt="Linkedin icon"></a>
+                    <a href="https://www.youtube.com/" target="_blank"><img class="footerIcon" src="../assets/youtube.svg" alt="Youtube icon"></a>
                 </div>
                 <div class="socialTag">
                     <a href="https://www.youtube.com/" target="_blank">@Youtube</a>
                 </div>
             </div>
-
         </div>
     </footer>
 </body>
