--- a/pages/skills.html
+++ b/pages/skills.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Portfolio</title>
 </head>
-<body>
-<!-- ENCABEZADO -->
+<body class="d-flex flex-column justify-content-between">
+    <!-- ENCABEZADO -->
     <header>
         <nav class="navbar navbar-expand-sm navbar-expand-md navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
@@ -42,7 +42,7 @@
             </div>
         </nav>
     </header>
-<!-- SECCIONES -->
+    <!-- SECCIONES -->
     <main>
     </main>
     <!-- FOOTER -->
