--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <!-- ABOUT ME -->
         <section class="container-fluid aboutMeSection p-4">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-around align-items-center flex-wrap-reverse mx-4 my-3 row-gap-5 aboutMeContainer">
-                <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex-columm d-md-flex-columm d-lg-flex-columm justify-content-center">
-                    <h1 class="fs-2">Hi I'm <span class="brandSpan fs-2">Sebastián Araya</span></p>
+                <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex-columm d-md-flex-columm d-lg-flex-columm justify-content-center align-items-center">
+                    <h1 class="fs-2 text-center">Hi I'm <span class="brandSpan fs-2">Sebastián Araya</span></p>
                     <p class="aboutMeText fs-5 my-4">Graduate in Computer Engineering and Full Stack Developer career's student at Coderhouse.</p>
-                    <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-between gap-3">
+                    <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center gap-3">
                         <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex">
                             <button type="button" class="btn btn-dark">Download CV</button>
                         </div>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center text-center">
                     <div class="col-sm-3 col-md-3 col-lg-3">
-                        <a href="./pages/portfolio.html" class="btn btn-dark">More skills</a>
+                        <a href="./pages/skills.html" class="btn btn-dark">More skills</a>
                     </div>
                 </div>
             </div>
