--- a/pages/skills.html
+++ b/pages/skills.html
@@ -44,6 +44,54 @@
     </header>
     <!-- SECCIONES -->
     <main>
+        <section>
+
+            <div class="container-fluid p-4">
+                <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
+                    <div class="col-sm-8 col-md-8 col-lg-8">
+                        <div id="carouselExampleCaptions" class="carousel carousel-dark slide">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active text-center">
+                                    <img src="../assets/html.png" class="img-fluid" alt="HTML Logo">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>HTML</h5>
+                                        <p>Some representative placeholder content for the first slide.</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item text-center">
+                                    <img src="../assets/css.png" class="img-fluid" alt="CSS Logo">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>CSS</h5>
+                                        <p>Some representative placeholder content for the second slide.</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item text-center">
+                                    <img src="../assets/git.png" class="img-fluid" alt="Git Logo">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>GIT</h5>
+                                        <p>Some representative placeholder content for the third slide.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
     <!-- FOOTER -->
     <footer>
