Se corrigen rutas de los iconos en el footer del index

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="socialContainer">
             <div class="socialNetwork">
                 <div class="socialIcon">
-                    <a href="https://www.linkedin.com/in/sarayaq/" target="_blank"><img class="footerIcon" src="../assets/linkedin.svg" alt="Linkedin icon"></a>
+                    <a href="https://www.linkedin.com/in/sarayaq/" target="_blank"><img class="footerIcon" src="./assets/linkedin.svg" alt="Linkedin icon"></a>
                 </div>
                 <div class="socialTag">
                     <a href="https://www.linkedin.com/in/sarayaq/" target="_blank">@sarayaq</a>
@@ -163,7 +163,7 @@
             </div>
             <div class="socialNetwork">
                 <div class="socialIcon">
-                    <a href="https://github.com/sebastianarayaq" target="_blank"><img class="footerIcon" src="../assets/github.svg" alt="Github icon"></a>
+                    <a href="https://github.com/sebastianarayaq" target="_blank"><img class="footerIcon" src="./assets/github.svg" alt="Github icon"></a>
                 </div>
                 <div class="socialTag">
                     <a href="https://github.com/sebastianarayaq" target="_blank">@sebastianarayaq</a>
@@ -171,7 +171,7 @@
             </div>
             <div class="socialNetwork">
                 <div class="socialIcon">
-                    <a href="https://www.youtube.com/" target="_blank"><img class="footerIcon" src="../assets/youtube.svg" alt="Youtube icon"></a>
+                    <a href="https://www.youtube.com/" target="_blank"><img class="footerIcon" src="./assets/youtube.svg" alt="Youtube icon"></a>
                 </div>
                 <div class="socialTag">
                     <a href="https://www.youtube.com/" target="_blank">@Youtube</a>
