Se modifican estilos y se agrega Animate on Scroll

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,7 +48,7 @@
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
                 <div class="col-sm-8 col-md-8 col-lg-8">
                     
-                    <h2 class="text-center">Send me a message</h2>
+                    <h1 class="text-center fw-bold">Send me a message</h1>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Full name" aria-label="Username" aria-describedby="basic-addon1">
                     </div>
