--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
@@ -45,10 +46,10 @@
 <!-- SECCIONES -->
     <main>
         <!-- ABOUT ME -->
-        <section class="container-fluid aboutMeSection p-4">
+        <section class="container-fluid aboutMeSection d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center p-4">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-around align-items-center flex-wrap-reverse mx-4 my-3 row-gap-5 aboutMeContainer">
-                <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex-columm d-md-flex-columm d-lg-flex-columm justify-content-center align-items-center">
-                    <h1 class="fs-2 text-center">Hi I'm <span class="brandSpan fs-2">Sebastián Araya</span></p>
+                <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex-columm d-md-flex-columm d-lg-flex-columm justify-content-center align-items-center" data-aos="fade-right" data-aos-duration="1500">
+                    <p class="fs-2 text-center">Hi I'm <span class="brandSpan fs-2">Sebastián Araya</span></p>
                     <p class="aboutMeText fs-5 my-4">Graduate in Computer Engineering and Full Stack Developer career's student at Coderhouse.</p>
                     <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center gap-3">
                         <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex">
@@ -67,13 +68,13 @@
         <!-- PORTFOLIO -->
         <section class="container-fluid p-4 my-3">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center text-center">
-                <div class="col-sm-3 col-md-3 col-lg-3">
+                <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-right">
                     <h2 class="fw-bold">Portfolio</h2>
                 </div>
             </div>
             <div class="row row-gap-2">
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
-                    <div class="card d-flex d-flex-column align-items-center">
+                    <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Project #1</h5>
@@ -83,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
-                    <div class="card d-flex d-flex-column align-items-center">
+                    <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Project #2</h5>
@@ -93,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
-                    <div class="card d-flex d-flex-column align-items-center">
+                    <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Project #3</h5>
@@ -107,13 +108,13 @@
         <!-- SKILLS -->
         <section class="container-fluid p-4 my-3">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center text-center">
-                <div class="col-sm-3 col-md-3 col-lg-3">
+                <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-right">
                     <h2 class="fw-bold">Skills</h2>
                 </div>
             </div>
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center row-gap-2">
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center">
-                    <div class="card d-flex d-flex-column align-items-center">
+                    <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="assets/html.png" class="img-fluid card-img-top" alt="HTML image">
                         <div class="card-body">
                             <h5 class="fw-bold text-center">HTML</h5>
@@ -122,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center">
-                    <div class="card d-flex d-flex-column align-items-center">
+                    <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="assets/css.png" class="img-fluid card-img-top" alt="CSS image">
                         <div class="card-body">
                             <h5 class="fw-bold text-center">CSS</h5>
@@ -131,7 +132,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center">
-                    <div class="card d-flex d-flex-column align-items-center">
+                    <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="assets/git.png" class="img-fluid card-img-top" alt="GIT image">
                         <div class="card-body">
                             <h5 class="fw-bold text-center">GIT</h5>
@@ -179,5 +180,12 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 200
+        });
+    </script>
 </body>
 </html>
