--- a/pages/skills.html
+++ b/pages/skills.html
@@ -62,22 +62,22 @@
                                 <div class="carousel-item active text-center">
                                     <img src="../assets/html.png" class="img-fluid" alt="HTML Logo">
                                     <div class="carousel-caption d-none d-md-block">
-                                        <h5>HTML</h5>
-                                        <p>Some representative placeholder content for the first slide.</p>
+                                        <h2>HTML</h2>
+                                        <p>Well-structured web content with clean, semantic code for accessibility and presentation.</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item text-center">
                                     <img src="../assets/css.png" class="img-fluid" alt="CSS Logo">
                                     <div class="carousel-caption d-none d-md-block">
-                                        <h5>CSS</h5>
-                                        <p>Some representative placeholder content for the second slide.</p>
+                                        <h2>CSS</h2>
+                                        <p>Styling, layout, and responsive design to ensure an appealing online presentation.</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item text-center">
                                     <img src="../assets/git.png" class="img-fluid" alt="Git Logo">
                                     <div class="carousel-caption d-none d-md-block">
-                                        <h5>GIT</h5>
-                                        <p>Some representative placeholder content for the third slide.</p>
+                                        <h2>GIT</h2>
+                                        <p>Version control, collaboration, and tracking changes in software projects.</p>
                                     </div>
                                 </div>
                             </div>
